added common footer and headerandnav templates

--- a/src/main/resources/templates/addAnimalForm.mustache
+++ b/src/main/resources/templates/addAnimalForm.mustache
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Add Animal</title>
-</head>
-<body>
+{{> headerandnav}}
 <h1>Add Animal</h1>
 <form action="/animal" method="post">
     <label for="name">Name:</label>
@@ -34,5 +29,4 @@
 </form>
 
 <script src="/js/main.js"></script>
-</body>
-</html>
+{{>footer}}
