--- a/src/main/resources/templates/addSightingForm.mustache
+++ b/src/main/resources/templates/addSightingForm.mustache
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Add Sighting</title>
-</head>
-<body>
+{{> headerandnav}}
 <h1>Add Sighting</h1>
 <form action="/addSighting" method="post">
     <label for="animal">Animal:</label>
@@ -21,5 +16,4 @@
 
     <input type="submit" value="Add Sighting">
 </form>
-</body>
-</html>
+{{> footer}}
