--- a/src/main/resources/templates/errorPage.mustache
+++ b/src/main/resources/templates/errorPage.mustache
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Error</title>
-</head>
-<body>
+{{> headerandnav}}
 <h1>Error</h1>
 <p>{{errorMessage}}</p>
-</body>
-</html>
+{{> footer}}
