--- a/src/main/resources/templates/listSightings.mustache
+++ b/src/main/resources/templates/listSightings.mustache
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>All Sightings</title>
-</head>
-<body>
+
+{{> headerandnav}}
 <h1>All Sightings</h1>
 <table>
     <tr>
@@ -31,5 +27,4 @@
         </tr>
     {{/sightings}}
 </table>
-</body>
-</html>
+{{>footer}}
