--- a/src/main/resources/templates/allAnimals.mustache
+++ b/src/main/resources/templates/allAnimals.mustache
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>All Animals</title>
-</head>
-<body>
+{{> headerandnav}}
 <h1>All Animals</h1>
 <table>
     <tr>
@@ -27,5 +22,4 @@
         </tr>
     {{/animals}}
 </table>
-</body>
-</html>
+{{> footer}}
