--- a/src/main/resources/templates/addAnimalForm.mustache
+++ b/src/main/resources/templates/addAnimalForm.mustache
@@ -1,32 +1,56 @@
 {{> headerandnav}}
-<h1>Add Animal</h1>
-<form action="/animal" method="post">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required>
 
-    <label for="isEndangered">Is Endangered?</label>
-    <input type="checkbox" id="isEndangered" name="isEndangered">
+<div class="container">
+    <h1>Add Animal</h1>
+    <form action="/animal" method="post" class="form-horizontal">
+        <div class="form-group">
+            <label for="name" class="col-sm-2 control-label">Name:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="name" name="name" required>
+            </div>
+        </div>
 
-    <div id="endangeredOptions" style="display: none;">
-        <label for="health">Health:</label>
-        <select id="health" name="health">
-            <option></option>
-            <option value="HEALTHY">Healthy</option>
-            <option value="ILL">Ill</option>
-            <option value="OKAY">Okay</option>
-        </select>
+        <div class="form-group">
+            <label for="isEndangered" class="col-sm-2 control-label">Is Endangered?</label>
+            <div class="col-sm-10">
+                <input type="checkbox" id="isEndangered" name="isEndangered">
+            </div>
+        </div>
 
-        <label for="age">Age:</label>
-        <select id="age" name="age">
-            <option></option>
-            <option value="NEWBORN">Newborn</option>
-            <option value="YOUNG">Young</option>
-            <option value="ADULT">Adult</option>
-        </select>
-    </div>
+        <div id="endangeredOptions" style="display: none;">
+            <div class="form-group">
+                <label for="health" class="col-sm-2 control-label">Health:</label>
+                <div class="col-sm-10">
+                    <select id="health" name="health" class="form-control">
+                        <option></option>
+                        <option value="HEALTHY">Healthy</option>
+                        <option value="ILL">Ill</option>
+                        <option value="OKAY">Okay</option>
+                    </select>
+                </div>
+            </div>
 
-    <input id = "submitBtn" type="submit" value="Add Animal">
-</form>
+            <div class="form-group">
+                <label for="age" class="col-sm-2 control-label">Age:</label>
+                <div class="col-sm-10">
+                    <select id="age" name="age" class="form-control">
+                        <option></option>
+                        <option value="NEWBORN">Newborn</option>
+                        <option value="YOUNG">Young</option>
+                        <option value="ADULT">Adult</option>
+                    </select>
+                </div>
+            </div>
+        </div>
 
-<script src="/js/main.js"></script>
-{{>footer}}
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <input id="submitBtn" type="submit" value="Add Animal" class="btn btn-primary">
+            </div>
+        </div>
+    </form>
+</div>
+
+<script src="/js/addform.js"></script>
+
+{{> footer}}
