--- a/src/main/resources/templates/addSightingForm.mustache
+++ b/src/main/resources/templates/addSightingForm.mustache
@@ -1,19 +1,41 @@
 {{> headerandnav}}
-<h1>Add Sighting</h1>
-<form action="/addSighting" method="post">
-    <label for="animal">Animal:</label>
-    <select id="animal" name="animal.id">
-        {{#animals}}
-            <option value="{{id}}">{{name}}</option>
-        {{/animals}}
-    </select>
 
-    <label for="location">Location:</label>
-    <input type="text" id="location" name="location" required>
+<div class="container">
+    <h1>Add Sighting</h1>
+    <form action="/addSighting" method="post" class="form-horizontal">
+        <div class="form-group">
+            <label for="animal" class="col-sm-2 control-label">Animal:</label>
+            <div class="col-sm-10">
+                <select id="animal" name="animal.id" class="form-control">
+                    {{#animals}}
+                        <option value="{{id}}">{{name}}</option>
+                    {{/animals}}
+                </select>
+            </div>
+        </div>
 
-    <label for="rangerName">Ranger Name:</label>
-    <input type="text" id="rangerName" name="rangerName" required>
+        <div class="form-group">
+            <label for="location" class="col-sm-2 control-label">Location:</label>
+            <div class="col-sm-10">
+                <input type="text" id="location" name="location" required class="form-control">
+            </div>
+        </div>
 
-    <input type="submit" value="Add Sighting">
-</form>
+        <div class="form-group">
+            <label for="rangerName" class="col-sm-2 control-label">Ranger Name:</label>
+            <div class="col-sm-10">
+                <input type="text" id="rangerName" name="rangerName" required class="form-control">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <input type="submit" value="Add Sighting" class="btn btn-primary">
+            </div>
+        </div>
+    </form>
+</div>
+
+<script src="/js/addform.js"></script>
+
 {{> footer}}
