--- a/src/main/resources/templates/allAnimals.mustache
+++ b/src/main/resources/templates/allAnimals.mustache
@@ -1,25 +1,33 @@
 {{> headerandnav}}
-<h1>All Animals</h1>
-<table>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Health</th>
-        <th>Age</th>
-    </tr>
-    {{#animals}}
+
+<div class="container">
+    <h1>All Animals</h1>
+    <table class="table table-bordered table-striped">
+        <thead>
         <tr>
-            <td>{{id}}</td>
-            <td>{{name}}</td>
-            {{#health}} <!-- Check if the health attribute exists (for EndangeredAnimal) -->
-                <td>{{health}}</td>
-                <td>{{age}}</td>
-            {{/health}}
-            {{^health}} <!-- If health attribute doesn't exist (for Animal) -->
-                <td>N/A</td>
-                <td>N/A</td>
-            {{/health}}
+            <th>ID</th>
+            <th>Name</th>
+            <th>Health</th>
+            <th>Age</th>
         </tr>
-    {{/animals}}
-</table>
+        </thead>
+        <tbody>
+        {{#animals}}
+            <tr>
+                <td>{{id}}</td>
+                <td>{{name}}</td>
+                {{#health}} <!-- Check if the health attribute exists (for EndangeredAnimal) -->
+                    <td>{{health}}</td>
+                    <td>{{age}}</td>
+                {{/health}}
+                {{^health}} <!-- If health attribute doesn't exist (for Animal) -->
+                    <td>N/A</td>
+                    <td>N/A</td>
+                {{/health}}
+            </tr>
+        {{/animals}}
+        </tbody>
+    </table>
+</div>
+
 {{> footer}}
