--- a/src/main/resources/templates/listSightings.mustache
+++ b/src/main/resources/templates/listSightings.mustache
@@ -1,30 +1,37 @@
-
 {{> headerandnav}}
-<h1>All Sightings</h1>
-<table>
-    <tr>
-        <th>ID</th>
-        <th>Animal</th>
-        <th>Endangered</th>
-        <th>Location</th>
-        <th>Ranger Name</th>
-        <th>Sighting Time</th>
-        <th>Actions</th>
-    </tr>
-    {{#sightings}}
+
+<div class="container">
+    <h1>All Sightings</h1>
+    <table class="table table-bordered table-striped">
+        <thead>
         <tr>
-            <td>{{id}}</td>
-            <td>{{animal.name}}</td>
-            <td>{{isEndangered}}</td>
-            <td>{{location}}</td>
-            <td>{{rangerName}}</td>
-            <td>{{reportedTime}}</td>
-            <td>
-                <form action="/deleteSighting/{{id}}" method="post">
-                    <button type="submit">Delete</button>
-                </form>
-            </td>
+            <th>ID</th>
+            <th>Animal</th>
+            <th>Endangered</th>
+            <th>Location</th>
+            <th>Ranger Name</th>
+            <th>Sighting Time</th>
+            <th>Actions</th>
         </tr>
-    {{/sightings}}
-</table>
+        </thead>
+        <tbody>
+        {{#sightings}}
+            <tr>
+                <td>{{id}}</td>
+                <td>{{animal.name}}</td>
+                <td>{{isEndangered}}</td>
+                <td>{{location}}</td>
+                <td>{{rangerName}}</td>
+                <td>{{reportedTime}}</td>
+                <td>
+                    <form action="/deleteSighting/{{id}}" method="post">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                </td>
+            </tr>
+        {{/sightings}}
+        </tbody>
+    </table>
+</div>
+
 {{>footer}}
