--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -10,19 +10,27 @@ body {
     margin: 0;
 }
 
-.container {
-    flex: 1;
+footer {
+   background-color: #f5f5f5;
+    padding: 20px;
+     text-align: center;
+    order-top: 1px solid #e5e5e5;
+     position: fixed;
+      bottom: 0;
+     width: 100%;
 }
 
-footer {
-    background-color: #f5f5f5;
-    padding: 20px;
-    text-align: center;
-    border-top: 1px solid #e5e5e5;
-    position: relative;
-    bottom: 0;
-    width: 100%;
+.container {
+    min-height: 100vh; /* This ensures that the container takes at least the full viewport height */
+    display: flex;
+    flex-direction: column;
 }
+
+/* Content class is used to style the main content area if needed */
+.content {
+    flex: 1; /* This will make the content area take up all available vertical space */
+}
+
 
 
 
